welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: ']' expected but '(' found.
  var T = new Array[Color(x)]
                         ^