welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
}

def exo(){
  var x = getMondeHauteur
  var T = new Array[Color(x)]
  for(compteur <- T){
    T(compteur) = getCouleurSol()
    avance()
  }
  for(i <- 1 to 5){
    gauche()
    avance()
    droite()
    avance()
    for(k <- 0 to x-1){
      Brosse(T(k))
    }
  }
}

def Brosse(c:Color){
  setCouleurBrosse(c:Color)
  baisseBrosse()
  leveBrosse()
  avance()
}